Tried to fix products filters delayed request. Re-structured contacts on contacts page. Added password visibility toggle.

--- a/web/src/styles/components/UI/Input.scss
+++ b/web/src/styles/components/UI/Input.scss
@@ -1,3 +1,23 @@
+.password-input-container {
+    position: relative;
+
+    .password-toggle {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        top: 50%;
+        right: 10px;
+        transform: translateY(-50%);
+        cursor: pointer;
+        z-index: 1;
+
+        svg {
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
 .input-field {
     width: 100%;
     height: 50px;
@@ -11,6 +31,7 @@
     &::placeholder {
         text-transform: uppercase;
         color: var(--transparent-black-60);
+        max-width: 85%;
     }
 
     &.invalid {
